test/tests/stages/14_pointers/invalid_types/assign_int_var_to_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(ptr)
  =
  identifier(x)
  ;
  }
